// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Renders with children 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer Toolbar-active"
    data-testid="toolbar"
  >
    <div
      class="Toolbar-toolbar"
    >
      <div>
        <span
          class="Text-text"
        >
          Item1
        </span>
      </div>
      <div>
        <span
          class="Text-text"
        >
          Item2
        </span>
      </div>
      <div>
        <span
          class="Text-text"
        >
          Item3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar Renders with children as react fragments 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer Toolbar-active"
    data-testid="toolbar"
  >
    <div
      class="Toolbar-toolbar"
    >
      <div>
        <span
          class="Text-text"
        >
          Item1
        </span>
      </div>
      <div>
        <span
          class="Text-text"
        >
          Item2
        </span>
      </div>
      <div>
        <span
          class="Text-text"
        >
          Item3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar Renders with default Props 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer"
  >
    <div
      class="Toolbar-toolbar"
    />
  </div>
</DocumentFragment>
`;

exports[`Toolbar ToolbarSeparator 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer"
    data-testid="toolbar"
  >
    <div
      class="Toolbar-toolbar"
    >
      <div>
        <span
          class="Text-text"
        >
          Item1
        </span>
      </div>
      <div>
        <div
          aria-label="Separator"
          class="ToolbarSeparator-separator"
        />
      </div>
      <div>
        <span
          class="Text-text"
        >
          Item2
        </span>
      </div>
      <div>
        <span
          class="Text-text"
        >
          Item3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar ToolbarSpacer 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer"
    data-testid="toolbar"
  >
    <div
      class="Toolbar-toolbar"
    >
      <div>
        <span
          class="Text-text"
        >
          Item1
        </span>
      </div>
      <span
        class="spacer"
        style="flex-grow: 1;"
      />
      <div>
        <span
          class="Text-text"
        >
          Item2
        </span>
      </div>
      <div>
        <span
          class="Text-text"
        >
          Item3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar overflow menu 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer Toolbar-hasOverflow"
    data-testid="toolbar"
    style="width: 300px;"
  >
    <div
      class="Toolbar-toolbar"
    >
      <div>
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item1
        </span>
      </div>
      <div
        style="visibility: hidden;"
      >
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item2
        </span>
      </div>
      <div
        style="visibility: hidden;"
      >
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item3
        </span>
      </div>
    </div>
    <div
      class="Toolbar-overflowButtonContainer"
      title="Show More"
    >
      <ui5-togglebutton
        design="Transparent"
        icon="overflow"
        ui5-togglebutton=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar overflow menu 2`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer Toolbar-hasOverflow"
    data-testid="toolbar"
    style="width: 300px;"
  >
    <div
      class="Toolbar-toolbar"
    >
      <div>
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item1
        </span>
      </div>
      <div
        style="visibility: hidden;"
      >
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item2
        </span>
      </div>
      <div
        style="visibility: hidden;"
      >
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item3
        </span>
      </div>
    </div>
    <div
      class="Toolbar-overflowButtonContainer"
      title="Show More"
    >
      <ui5-togglebutton
        design="Transparent"
        icon="overflow"
        ui5-togglebutton=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar overflow menu 3`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer Toolbar-hasOverflow"
    data-testid="toolbar"
    style="width: 300px;"
  >
    <div
      class="Toolbar-toolbar"
    >
      <div>
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item1
        </span>
      </div>
      <div
        style="visibility: hidden;"
      >
        <div
          aria-label="Separator"
          class="ToolbarSeparator-separator"
        />
      </div>
      <div
        style="visibility: hidden;"
      >
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item2
        </span>
      </div>
      <div
        style="visibility: hidden;"
      >
        <span
          class="Text-text"
          data-testid="toolbar-item"
          style="width: 200px;"
        >
          Item3
        </span>
      </div>
    </div>
    <div
      class="Toolbar-overflowButtonContainer"
      title="Show More"
    >
      <ui5-togglebutton
        design="Transparent"
        icon="overflow"
        ui5-togglebutton=""
      />
    </div>
  </div>
</DocumentFragment>
`;
